Compacted MultiClusterQuickstart class